- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Press tab changes focus in text message dialog
- More items are now translatables. French translation has been updated. Translators, you are invited to check ts files to update your translations with new strings.
- More elements are now labellize, specificly in main's window.
- When you switch to Away mode due to your inactivity, your status message is now updated
- Blank nicknames are set to NoName followed by user ID
Android client
- Empty channels with max users set to zero are listed first (sticky channels)
- French's language is now supported
- Buttons for changing between tabs Channels, Chat, Media Streams and Files
- Preferences are grouped into General, Sound Events, Text to Speech, Connection and Sound System
- Users are now displayed before channels
- Support for dark mode and day/night shift
- Blank nicknames are set to NoName followed by user ID
- More elements are now labeled, specifically some edit fields
- Bluetooth headset microphone usage facility
- Use back button to navigate to the parent channel
iOS client
- Channels are now sorted correctly in TeamTalk on iOS 13 and newer
- French translation has been updated
- Blank nicknames are set to NoName followed by user ID

Version 5.5.1, 2020/05/03
Accessible Windows client
- Fixed crash issue when opening stream media file dialog

Version 5.5, 2020/04/14
Default Qt client
- VBR/CBR selection for OPUS codec 
- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Audio preprocessor for media file streaming
- Control media file offset before streaming to channel
- Pause media file while streaming to channel
- Test media file playback before streaming to channel
- Restored compatibility with Windows 7 (api-ms-win-core-winrt-l1-1-0.dll)
- Fixed bug where audio recording to single file contained audio from media files
- Fixed bug in .ogg file header for OPUS codec